Fix panel collapse icon if link is added by f:facet to header
Fix wrong display of panel collapse icon, if panel header contains a link

<b:panel collapsible="false">
  <f:facet name="heading">
    <i class="fa fa-battery-three-quarters" style="padding-right:20px" />
    <h:outputText value="Battery charge left: 75% " />
   <b:link style-class="some-class" onclick="alert('clicked!'); return false;" value="Click this link to show an alert box." />
    <b:badge style="margin-left:10px; background-color:#5cb85c" value="good"  />
  </f:facet>
....
</b:panel>

--- a/gradleResources/staticResources/less/bf/customizations.less
+++ b/gradleResources/staticResources/less/bf/customizations.less
@@ -2,13 +2,13 @@
 
 // Panels
 /* Collapsible panels */
-.panel-heading a:after {
+.panel-heading a.panel-title-link:after {
     font-family:'Glyphicons Halflings';
     content:"\e114";
     float: right;
     color: grey;
 }
-.panel-heading a.collapsed:after {
+.panel-heading a.panel-title-link.collapsed:after {
     content:"\e080";
 }
 a.panel-title-link {
